kubernetes/apps/security/teleport/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: teleport
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  hostnames:
    - "teleport.${SECRET_DOMAIN}"
    - "*.teleport.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: teleport
      matches:
        - path:
            type: PathPrefix
            value: /
